--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,7 @@
         <!--eureka-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>        </dependency>
         <!--feign-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
